--- a/src/app/pages/referral/components/create-loyalty/create-loyalty.component.html
+++ b/src/app/pages/referral/components/create-loyalty/create-loyalty.component.html
@@ -35,8 +35,8 @@
             >
               <nz-option
                 *ngFor="let course of listCourse"
-                [nzValue]="course.id"
-                [nzLabel]="course.courseCode"
+                [nzValue]="course.courseCode"
+                [nzLabel]="course.title"
               >
               </nz-option>
             </nz-select>
