--- a/src/app/pages/email/components/system-email-list/system-email-list.component.html
+++ b/src/app/pages/email/components/system-email-list/system-email-list.component.html
@@ -15,10 +15,13 @@
       [loading]="loading"
     >
       <table-column header="STT" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
-      <table-column header="Tên tổ chức" key="organizationName" [width]="'200px'"></table-column>
+      <table-column header="Tên email" key="emailSubject" [width]="'200px'"></table-column>
+      <table-column header="Tên buổi học" key="" [width]="'200px'"></table-column>
+      <table-column header="Tên lớp học" key="" [width]="'200px'"></table-column>
       <table-column header="Tên diễn giả" key="roleName" [width]="'200px'"></table-column>
       <table-column header="Tên khóa học" key="courseName" [width]="'200px'"></table-column>
       <table-column header="Tiêu đề email" key="roleName" [width]="'200px'"></table-column>
+      <table-column header="Tên tổ chức" key="organizationName" [width]="'200px'"></table-column>
       <table-column header="Trạng thái" key="status" [width]="'180px'">
         <ng-template appCell let-data>
           <span class="text-valid" *ngIf="data.status">Kích hoạt</span>
