--- a/src/app/pages/organization/components/create-organization/create-organization.component.scss
+++ b/src/app/pages/organization/components/create-organization/create-organization.component.scss
@@ -87,3 +87,42 @@
   width: 100%;
 }
 
+.select-file{
+  width: 104px;
+  height: 104px;
+  margin-right: 8px;
+  margin-bottom: 8px;
+  text-align: center;
+  vertical-align: top;
+  background-color: #fafafa;
+  border: 1px dashed #d9d9d9;
+  border-radius: 2px;
+  cursor: pointer;
+  overflow: hidden;
+  position: relative;
+  transition: border-color .3s;
+  &:hover{
+    border-color: #1890ff;
+  }
+
+  .btn-select-file{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    text-align: center;
+    flex-direction: column;
+    span{
+      font-size: 14px;
+    }
+  }
+}
+
+.img-preview{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
