--- a/src/app/pages/student/components/studying-student/studying-student.component.scss
+++ b/src/app/pages/student/components/studying-student/studying-student.component.scss
@@ -23,7 +23,8 @@
 
 .custom-action{
   cursor: pointer;
-  padding-right: 5px;
+  font-size: 18px;
+  padding-right: 8px;
   &:hover{
     color: #1677ff;
   }
