--- a/src/app/pages/organization/components/create-organization/create-organization.component.html
+++ b/src/app/pages/organization/components/create-organization/create-organization.component.html
@@ -100,7 +100,7 @@
           </div>
         </div>
 
-        <div nz-col [nzSpan]="5" ></div>
+        <div nz-col [nzSpan]="5" *ngIf="isCreate"></div>
 
         <div nz-col [nzSpan]="3" >
           <span class="text-label">
