--- a/src/app/pages/payment/components/payment-auth/payment-auth.component.html
+++ b/src/app/pages/payment/components/payment-auth/payment-auth.component.html
@@ -58,12 +58,12 @@
             </span>
           </span>
 
-          <span class="custom-action" *ngIf="data.verifyPay">
-            <span class="delete"
-              nzTooltipTitle="Hủy xác thực" nzTooltipPlacement="top" nz-tooltip
-              nz-icon nzType="close-square" nzTheme="outline" (click)="unVerifyPayment(data)">
-            </span>
-          </span>
+<!--          <span class="custom-action" *ngIf="data.verifyPay">-->
+<!--            <span class="delete"-->
+<!--              nzTooltipTitle="Hủy xác thực" nzTooltipPlacement="top" nz-tooltip-->
+<!--              nz-icon nzType="close-square" nzTheme="outline" (click)="unVerifyPayment(data)">-->
+<!--            </span>-->
+<!--          </span>-->
 
         </ng-template>
       </table-column>
