--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,12 @@
-
+.spin-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.8); /* Optional: add a semi-transparent background */
+    z-index: 9999; /* Ensure it's above other content */
+  }
