--- a/src/app/pages/report/funnel-report/dialog/filter-funnel-course-report/filter-funnel-course-report.component.html
+++ b/src/app/pages/report/funnel-report/dialog/filter-funnel-course-report/filter-funnel-course-report.component.html
@@ -43,7 +43,7 @@
                 <nz-form-label>Tên khóa học</nz-form-label>
                 <nz-select nzPlaceHolder="---Chọn---" formControlName="courseNameCtrl" class="w-100" nzAllowClear
                     nzShowSearch>
-                    <nz-option *ngFor="let item of lstCourseModel" [nzValue]="item.id"
+                    <nz-option *ngFor="let item of dropModel.coursesResponse" [nzValue]="item.id"
                         [nzLabel]="item.name!"></nz-option>
                 </nz-select>
             </nz-form-item>
@@ -51,22 +51,33 @@
         <div nz-col [nzSpan]="12">
             <nz-form-item>
                 <nz-form-label>Tổ chức</nz-form-label>
-                <input nz-input formControlName="organizationNameCtrl" placeholder="Nhập">
+                <nz-select nzPlaceHolder="---Chọn---" formControlName="organizationNameCtrl" class="w-100" nzAllowClear
+                    nzShowSearch>
+                    <nz-option *ngFor="let item of dropModel.organizationsResponse" [nzValue]="item.id"
+                        [nzLabel]="item.name!"></nz-option>
+                </nz-select>
             </nz-form-item>
-
         </div>
     </div>
     <div nz-row [nzGutter]="24">
         <div nz-col [nzSpan]="12">
             <nz-form-item>
                 <nz-form-label>Tên diễn giả</nz-form-label>
-                <input nz-input formControlName="speakerNameCtrl" placeholder="Nhập">
+                <nz-select nzPlaceHolder="---Chọn---" formControlName="speakerNameCtrl" class="w-100" nzAllowClear
+                    nzShowSearch>
+                    <nz-option *ngFor="let item of dropModel.speakersResponse" [nzValue]="item.id"
+                        [nzLabel]="item.name!"></nz-option>
+                </nz-select>
             </nz-form-item>
         </div>
         <div nz-col [nzSpan]="12">
             <nz-form-item>
                 <nz-form-label>Số điện thoại</nz-form-label>
-                <input nz-input formControlName="phoneNumberCtrl" placeholder="Nhập">
+                <nz-select nzPlaceHolder="---Chọn---" formControlName="phoneNumberCtrl" class="w-100" nzAllowClear
+                    nzShowSearch>
+                    <nz-option *ngFor="let item of dropModel.phonesResponse" [nzValue]="item.id"
+                        [nzLabel]="item.name!"></nz-option>
+                </nz-select>
             </nz-form-item>
         </div>
     </div>
@@ -77,7 +88,7 @@
                 <nz-form-label>Lớp học</nz-form-label>
                 <nz-select nzPlaceHolder="---Chọn---" formControlName="classCtrl" class="w-100" nzAllowClear
                     nzShowSearch>
-                    <nz-option *ngFor="let item of lstClass" [nzValue]="item.classId"
+                    <nz-option *ngFor="let item of dropModel.classesResponse" [nzValue]="item.id"
                         [nzLabel]="item.name!"></nz-option>
                 </nz-select>
             </nz-form-item>
